# ListaDeChamada

./: README.md
Dev/lista de chamada Douglinhas/untitled/ListaDeChamada/: main.py
Dev/lista de chamada Douglinhas/untitled/ListaDeChamada/controlador/: aluno_controlador.py
Dev/lista de chamada Douglinhas/untitled/ListaDeChamada/modelo/: aluno_modelo.py
Dev/lista de chamada Douglinhas/untitled/ListaDeChamada/tests/: test_aluno_controlador.py  test_aluno_visao.py
Dev/lista de chamada Douglinhas/untitled/ListaDeChamada/visao/: aluno_visao.py
Dev/lista de chamada Douglinhas/untitled/lista_de_chamada/: .gitignore  .pylintrc  main.py  pyproject.toml  setup.py
Dev/lista de chamada Douglinhas/untitled/lista_de_chamada/controlador/: aluno_controlador.py
Dev/lista de chamada Douglinhas/untitled/lista_de_chamada/modelo/: aluno_modelo.py
Dev/lista de chamada Douglinhas/untitled/lista_de_chamada/tests/: test_aluno_modelo.py
Dev/lista de chamada Douglinhas/untitled/lista_de_chamada/visao/: aluno_visao.py
